INT-misc-41a0.20: Some HTML reformat

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -293,6 +293,7 @@ textarea {
 /* Container Flex Justify */
 /* Replacement for float-left + float-right: Flex, non-wrapping, one-line vertically centered, item justified  */
 .contFJ {
+  text-align: left;
   justify-content: space-between;
 }
 .contFS {
