--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -443,6 +443,7 @@ input[type=text].coordinate {
 /* NavBar ======================================================================================================== */
 #navbar {
   margin: auto;
+  background-color: transparent;
 }
 
 .navbar-container {
