--- a/skins/supernova-ivash/skin.css
+++ b/skins/supernova-ivash/skin.css
@@ -160,12 +160,12 @@ input, select, textarea, div.z {
  color                : #D58000;
 }
 
-th, td, input, select, textarea {
+.cell, .th, .td, th, td, input, select, textarea {
   border-color         : #483634;
   background-color     : #242424;
 }
 
-td.c, th.c_l, th.c_r, th.c_c, th.c_j, tr.c_l > th, tr.c_r > th, tr.c_c > th, tr.c_j > th {
+.header, .th, .td, td.c, th.c_l, th.c_r, th.c_c, th.c_j, tr.c_l > th, tr.c_r > th, tr.c_c > th, tr.c_j > th {
   background-image     : url("img/bg1.gif");
 }
 
