--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -184,7 +184,7 @@
           </tr>
         <!-- END ques -->
 
-        <!-- INCLUDE planet_resources -->
+        <!-- INCLUDE navbar_resources -->
       </table>
 
       <!-- INCLUDE planet_fleet_list -->
