INT-fix-41a0.33: Fixed 'jumin' of vertical resource navbar

--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -299,9 +299,11 @@
 
   <!-- IF SN_RENDER_NAVBAR_PLANET -->
     <!-- DEFINE $IN_NAVBAR = 1 -->
-  <table align="center" class="border_image_small" id="navbar_resources">
-    <!-- INCLUDE navbar_resources -->
-  </table>
+    <div>
+      <table class="border_image_small" id="navbar_resources">
+        <!-- INCLUDE navbar_resources -->
+      </table>
+    </div>
     <!-- DEFINE $IN_NAVBAR = 0 -->
   <!-- ENDIF -->
 </div>
