MISC-fix-41a0.38: Fixed typo

--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -14,6 +14,7 @@
       <a href="{navbar_prefix_button.URL_RELATIVE}" style="margin: 0.5em; width: 5.818181818182em;">
         <img class="w100" src="{navbar_prefix_button.IMAGE}" />
       </a>
+      <!-- END navbar_prefix_button -->
     </div>
     <!-- ENDIF -->
 
