INT-misc-41a0.39: Removed unsupported viewport tag target-densitydpi

--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -5,7 +5,8 @@
 
     <!--<meta name="viewport" content="width=device-width, initial-scale=1" />-->
     <!--<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, initial-scale=0.6675" />-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, target-densitydpi=device-dpi" />
+    <!--, target-densitydpi=device-dpi-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="HandheldFriendly" content="True">
     <!--<meta name="MobileOptimized" content="800">-->
 
