--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -11,9 +11,11 @@
     <!-- IF NAVBAR_PREFIX_BUTTONS -->
     <div class="contF a50 flexW">
       <!-- BEGIN navbar_prefix_button -->
-      <a href="{navbar_prefix_button.URL_RELATIVE}" style="margin: 0.5em; width: 5.818181818182em;">
-        <img class="w100" src="{navbar_prefix_button.IMAGE}" />
-      </a>
+      <div class="navbar-festival_button">
+        <a class="w100 h100" href="{navbar_prefix_button.URL_RELATIVE}" >
+          <img class="w100 h100" src="{navbar_prefix_button.IMAGE}" />
+        </a>
+      </div>
       <!-- END navbar_prefix_button -->
     </div>
     <!-- ENDIF -->
